[gd_scene load_steps=4 format=3 uid="uid://d0ygtvuya5j8e"]

[ext_resource type="Script" path="res://Player/BlubbleCount.gd" id="1_exvgw"]
[ext_resource type="Texture2D" uid="uid://cmld6ukpvs4du" path="res://icon.svg" id="2_wm44c"]
[ext_resource type="FontFile" uid="uid://nod41fu6od3j" path="res://Themes/Pixellari.ttf" id="3_y202t"]

[node name="BubbleCounter" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_exvgw")

[node name="BlubbleImage" type="TextureRect" parent="Control"]
layout_mode = 2
offset_left = 1065.0
offset_top = 20.0
offset_right = 1103.0
offset_bottom = 53.0
texture = ExtResource("2_wm44c")
expand_mode = 1

[node name="Counter" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1107.0
offset_top = 21.0
offset_right = 1148.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("3_y202t")
theme_override_font_sizes/font_size = 30
text = "x 0"

[connection signal="BubbleDownCountUIEvent" from="Control" to="Control" method="_on_bubble_down_count_ui_event"]
[connection signal="BubbleUpCountUIEvent" from="Control" to="Control" method="_on_bubble_up_count_ui_event"]
